--- a/index.html
+++ b/index.html
@@ -2,149 +2,187 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Sentence Info</title>
+	<title>Sentence Info - by @nainemom</title>
+	<link rel="stylesheet" href="https://bootswatch.com/lumen/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-rtl/3.2.0-rc2/css/bootstrap-rtl.min.css">
+	<link href="https://cdn.rawgit.com/rastikerdar/vazir-font/v2.0.0/dist/font-face.css" rel="stylesheet"/>
 	<style>
-		*{box-sizing: border-box;}
 		html, body{
-			height: 100%;
-			max-width: 800px;
-			margin: 0 auto;
-			font-family: tahoma;
-			font-size: .9em;
+			font-family: 'Vazir';
 		}
-		*:focus{
-			outline: none;
+		.content{
+			background: #fff;
 		}
-		pre, code{
-			direction: ltr;
-
-		}
-		#textbox{
-			margin: 0;
-			width: 100%;
-			resize: none;
-			min-height: 100px;
-			font-size: 12px;
-			padding: 6px;
-		}
-		.info{
-			display: inline-block;
-			width: 50%;
-			margin: 0;
-		}
-		.info > div, .info > span{
-			color: #C0392B;
-			font-size: 12px;
-			font-weight: bold;
-			padding: 15px;
-			min-height: 50px;
-		}
-		#info{
-			width: 100%;
-			colspan: 0;
-		}
-		#info tr td:first-child{
-			width: 20%;
-			padding: 5px;
-			background: #BDC3C7;
-		}
-		#info tr td:last-child{
-			padding: 5px;
-			background: #ECF0F1;
-			color: #C0392B;
-			font-weight: bold;
-		}
-		header{
-			display: block;
-			margin: 0;
-			padding: 15px 0;
-		}
-		header h2{
-			margin: 0;
+		#nai-letters{
+			word-break: break-all;
 			text-align: center;
-			color: #34495E;
 		}
-		footer{
-			position: fixed;
-			width: 100%;
-			left: 0;
-			bottom: 0;
-			padding: 10px;
-			background: rgba(255,255,255,.5);
+		#nai-letters .letter{
+			display: inline-block;
+			width: 38px;
+			height: 38px;
+			margin: 4px;
+			text-align: center;
+			cursor: default;
 		}
-		body::after{
-			content: '';
-			display: block;
-			height: 50px;
+		#nai-letters .letter.exist{
+
+			font-weight: bold;
+		}
+		#nai-ss{
+			vertical-align: middle;
+		}
+		footer.panel-footer{
+			padding: 0 15px;
+			line-height: 3;
 		}
 	</style>
 </head>
 <body dir="rtl">
-	<header><h2>اطلاعات جمله!</h2></header>
-	<p>
-		متن فارسی خود را در کادر زیر وارد کنید و اطلاعات نگارشی آن را ببینید!
-	</p>
-	<textarea id="textbox" placeholder="جمله خود را وارد کنید"></textarea>
-	<table id="info">
-		<tr>
-			<td>تعداد کاراکترها</td>
-			<td id="length"></td>
-		</tr>
-		<tr>
-			<td>تعداد کلمه‌ها</td>
-			<td id="words-length"></td>
-		</tr>
-		<tr>
-			<td>تعداد حروف</td>
-			<td id="letters-length"></td>
-		</tr>
-		<tr>
-			<td>تعداد نقطه‌ها</td>
-			<td id="dots-length"></td>
-		</tr>
-		<tr>
-			<td>تعداد فاصله‌ها</td>
-			<td id="spaces-length"></td>
-		</tr>
-		<tr>
-			<td>حروف استفاده شده</td>
-			<td id="used-letters"></td>
-		</tr>
-		<tr>
-			<td>حروف غایب</td>
-			<td id="missed-letters"></td>
-		</tr>
-		<tr>
-			<td>حروف غایب</td>
-			<td id="missed-letters-gliph"></td>
-		</tr>
-		<tr>
-			<td>حروف غایب در صورت برابری ـص و ص یا صـ و ـصـ</td>
-			<td id="missed-letters-gliph2"></td>
-		</tr>
-	</table>
+	<nav class="navbar navbar-default">
+		<div class="navbar-header">
+			<a class="navbar-brand" href="http://nainemom.github.io/sentence-info/"><span class="glyphicon glyphicon-text-background logo"></span> اطلاعات جمله - Sentence Info</a>
+		</div>
 
-	<footer>
-		ایجاد شده توسط امیر مومنیان: <a href="https://twitter.com/nainemom">توییتر</a>، <a href="https://github.com/nainemom/sentence-info">گیت‌هاب</a>، <a href="http://morde.ir">وبلاگ</a>
+
+		<ul class="nav navbar-nav navbar-left">
+			<li><a href="https://github.com/nainemom/sentence-info"><span class="glyphicon glyphicon-link"></span> صفحه گیتهاب</a></li>
+		</ul>
+
+
+	</nav>
+	<div class="col-xs-12 content">
+		<div class="form-group">
+			<label class="control-label">متن:</label>
+			<textarea class="form-control" id="textbox"></textarea>
+		</div>
+		<div class="form-group">
+			<label class="control-label">سخت‌گیری:</label>
+			<select class="form-control" id="setting">
+				<option value="3">زیاد</option>
+				<option value="2">متوسط</option>
+				<option value="1">کم</option>
+			</select>
+		</div>
+		<hr>
+		<div class="progress progress-striped">
+			<div class="progress-bar progress-bar-success" id="percetange" style="width: 0%"></div>
+		</div>
+		<div class="form-group">
+			<label class="control-label"> جدول خروجی: </label>
+			<div class="" id="nai-letters">A B C D</div>
+		</div>
+		<hr>
+		<div>
+			<table id="info" class="table table-striped table-hover ">
+				<tr>
+					<td>تعداد کاراکترها</td>
+					<td id="length"></td>
+				</tr>
+				<tr>
+					<td>تعداد کلمه‌ها</td>
+					<td id="words-length"></td>
+				</tr>
+				<tr>
+					<td>تعداد حروف</td>
+					<td id="letters-length"></td>
+				</tr>
+				<tr>
+					<td>تعداد نقطه‌ها</td>
+					<td id="dots-length"></td>
+				</tr>
+				<tr>
+					<td>تعداد فاصله‌ها</td>
+					<td id="spaces-length"></td>
+				</tr>
+			</table>
+		</div>
+	</div>
+
+
+	<footer class="panel-footer">
+	ایجاد شده توسط امیر مومنیان: <a href="https://twitter.com/nainemom">توییتر</a>، <a href="https://github.com/nainemom/sentence-info">گیت‌هاب</a>، <a href="http://morde.ir">وبلاگ</a>			
 	</footer>
 	
 	<script src="sentence-info.js"></script>
 	<script>
+		var elems = {
+			textbox: document.getElementById('textbox'),
+			naiLetters: document.getElementById('nai-letters'),
+			setting: document.getElementById('setting'),
+			percetange: document.getElementById('percetange')
+		};
 		var textbox = document.getElementById('textbox');
 		var sentence = new NaiSentence( textbox.value );
-		textbox.onkeyup = function(){
-			sentence.val = textbox.value;
-			document.getElementById('missed-letters').innerHTML 			= sentence.missedLetters().join(' ');
-			document.getElementById('missed-letters-gliph').innerHTML 		= sentence.missedLetters(true).join(' ');
-			document.getElementById('missed-letters-gliph2').innerHTML 		= sentence.missedLetters(true, true,true).join(' ');
-			document.getElementById('used-letters').innerHTML 				= sentence.usedLetters().join(' ');
+		var allLetters_lv = [
+			new NaiSentence('').missedLetters(),
+			new NaiSentence('').missedLetters(true,true,true),
+			new NaiSentence('').missedLetters(true)
+		];
+		
+		var applyChanges = function(){
+			sentence.val = elems.textbox.value;
+			elems.naiLetters.innerHTML = '';
+			var allLetters_ = allLetters_lv[parseInt(elems.setting.value)-1];
+			var missedLetters = [];
+			var naiLetters = [];
+			switch( parseInt(elems.setting.value) ){
+				case 1:
+					missedLetters = sentence.missedLetters();
+					break;
+				case 2:
+					missedLetters = sentence.missedLetters(true,true,true);
+					break;
+				case 3:
+					missedLetters = sentence.missedLetters(true);
+					break;				
+			}	
+			var numAll = allLetters_.length;
+			var numUsed = numAll - missedLetters.length;
+			elems.percetange.style.width = ((100 / numAll) * numUsed) + '%';
+
+			for( var i = 0; i < allLetters_.length; i++ ){
+				naiLetters.push({
+					letter: allLetters_[i],
+					missed: false 			
+				});
+			}	
+			var i, j, f, span;
+			for( i = 0; i < naiLetters.length; i++ ){
+				f = false;
+				for( j = 0; j < missedLetters.length; j++ ){
+					if( missedLetters[j] == naiLetters[i].letter ){
+						f = true;						
+						break;
+					}
+				}
+				naiLetters[i].missed = f;
+				span = document.createElement('span');
+				span.classList.add('btn');
+				//span.classList.add('disabled');
+				span.classList.add('letter');
+				span.innerHTML = naiLetters[i].letter;
+				if( !naiLetters[i].missed ){
+					span.classList.add('btn-success');
+				}
+				else{
+					span.classList.add('btn-default');
+				}
+				elems.naiLetters.appendChild( span );
+
+			}
+
 			document.getElementById('length').innerHTML 					= sentence.charactersLength();
 			document.getElementById('letters-length').innerHTML 			= sentence.lettersLength();
 			document.getElementById('words-length').innerHTML 				= sentence.wordsLength();
 			document.getElementById('dots-length').innerHTML 				= sentence.dotsLength();
 			document.getElementById('spaces-length').innerHTML 				= sentence.spacesLength();
+
+			
 		}
-		textbox.onkeyup();
+		elems.textbox.onkeyup = applyChanges;
+		elems.setting.onchange = applyChanges;
+		elems.textbox.onkeyup();
 	</script>
 </body>
 </html>
